fix: update dependencies and resolve 171 security vulnerabilities
- Bump Spring Boot 3.2.4 → 3.5.14 (fixes ~140 Trivy CVEs)
- Add flyway-database-postgresql for Flyway 11 compatibility
- Bump Flying Saucer 9.3.0 → 9.12.0, CommonMark 0.22.0 → 0.24.0
- Bump Apache POI 5.2.5 → 5.4.1, Stripe 25.3.0 → 29.2.0
- Bump AWS SDK 2.25.11 → 2.31.52, Resilience4j 2.2.0 → 2.3.0
- Bump logstash-logback-encoder 7.4 → 8.1
- Fix CodeQL: log injection in RequestLoggingFilter and RateLimitFilter
- Fix CodeQL: add CSRF disabled justification in SecurityConfig
- Fix CodeQL: replace deprecated Locale constructor with Locale.of()
- Fix CodeQL: add @ToString to Document and Signature entities
- Fix security.yml infinite loop on branch update
- Update CLAUDE.md with documentation rules and version bump

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>